<resources>

    <string name="app_name">IM</string>
    <string name="app_slogan">Talk To Someone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">send</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="setusername">输入你想叫什么名字</string>
    <string name="confirm">确定</string>
    <string name="pair_someone">正在匹配...</string>
    <string name="pair_success">匹配成功...</string>
    <string name="pair_failure">匹配失败...</string>
    <string name="connecting">正在连接...</string>
    <string name="connect_failure">连接服务器失败，请稍后重试...</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="login">登录</string>
    <string name="logging">正在登录...</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名只能为4到20位的数字字母或下划线</string>
    <string name="error_invalid_password">密码只能为4到20位的数字字母或下划线</string>
    <string name="error_incorrect_password">密码不对</string>
    <string name="error_field_required">必输</string>
    <string name="error_login_failed">登录失败</string>

    <string name="goto_signup">注册账号去</string>
    <string name="error_signup_failed">注册失败</string>
    <string name="title_activity_chat_home">ChatHomeActivity</string>
    <string name="navigation_collect">我的收藏</string>


</resources>
